rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__assignment_without_place_expr5.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_err :: < Statement >\n(stringify! (assignment_without_place_expr5), \"\\'foo\\' = 3;\")"
---
error: Not a valid assignment target.
  ┌─ assignment_without_place_expr5:1:1
  │
1 │ 'foo' = 3;
  │ ^^^^^ Not a valid assignment target.
